# photosort

./: .gitignore  README.md  ROADMAP.md  index.html  package-lock.json  package.json  vite.config.ts
python/: requirements.txt
python/src/: __init__.py  main.py
python/src/embedding/: __init__.py  clip_model.py
python/src/similarity/: __init__.py  clustering.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: analysis.rs  mod.rs  photos.rs  scan.rs  trash.rs
src-tauri/src/db/: mod.rs
src-tauri/src/sidecar/: mod.rs
src/components/common/: PhotoViewer.tsx  ProgressBar.tsx  SelectionBar.tsx  Toast.tsx
src/components/comparison/: ComparisonView.tsx  SimilarityGroup.tsx
src/components/folders/: FolderBrowser.tsx  FolderPicker.tsx
src/components/photos/: LazyPhotoCard.tsx  PhotoCard.tsx  PhotoGrid.tsx
src/components/quality/: QualityView.tsx
src/components/timeline/: TimelineView.tsx
src/components/trash/: TrashView.tsx
src/hooks/: useBlobUrl.ts
src/services/: analysisService.ts  fileSystemService.ts  qualityService.ts  tauriCommands.ts
src/stores/: photoStore.ts
src/types/: file-system-access.d.ts  index.ts
src/workers/: hashWorker.ts  qualityWorker.ts
